--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,14 @@
 spring.application.name=ToDoWebApp
+spring.main.web-application-type=reactive
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+spring.r2dbc.url=r2dbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:todo}
+spring.r2dbc.username=${DB_USER:test}
+spring.r2dbc.password=${DB_PASSWORD:test}
 
 spring.flyway.enabled=true
-
-
-# for testing purpose only in order not to garbage prod logs,
-# spring.jpa.show-sql=true
-# logging.level.org.hibernate.sql=trace
+spring.flyway.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:todo}
+spring.flyway.user=${DB_USER:test}
+spring.flyway.password=${DB_PASSWORD:test}
 
 spring.servlet.multipart.max-file-size=1000MB
 spring.servlet.multipart.max-request-size=1000MB
@@ -21,12 +19,14 @@ spring.servlet.multipart.max-request-size=1000MB
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 springdoc.swagger-ui.operationsSorter=method
+
+# Expose actuator endpoints (health, info, etc.)
 management.endpoints.web.exposure.include=*
 
-jwt.secret=${SECRET_KEY}
+jwt.secret=${SECRET_KEY:dev-secret}
 jwt.expiration-time=3600000
 
-cors.origins[0]=${FRONT_END_BASE_URL}
+cors.origins[0]=${FRONT_END_BASE_URL:http://localhost:3000}
 cors.methods[0]=GET
 cors.methods[1]=POST
 cors.methods[2]=PUT
