--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '3.9'
 
+networks:
+  todo-net:
+    driver: bridge
+
 services:
   postgres-db:
     image: postgres:14-alpine
@@ -11,6 +15,8 @@ services:
       - POSTGRES_PASSWORD=${MAIN_DB_PASSWORD}
       - POSTGRES_USER=${MAIN_DB_USER}
       - POSTGRES_DB=${MAIN_DB_NAME}
+    networks:
+      - todo-net
 
   todo-backend:
     build:
@@ -29,3 +35,17 @@ services:
       DB_PASSWORD: ${MAIN_DB_PASSWORD}
       SECRET_KEY: ${SECRET_KEY}
       FRONT_END_BASE_URL: ${FRONT_END_BASE_URL}
+    networks:
+      - todo-net
+
+  todo-frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: todo-frontend
+    ports:
+      - "3000:80"
+    depends_on:
+      - todo-backend
+    networks:
+      - todo-net
