--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ build/
 ### VS Code ###
 .vscode/
 /src/main/resources/application-dev.properties
+/.env
+/frontend/package-lock.json
+/frontend/node_modules/
