--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>example.todowebapp</groupId>
-    <artifactId>todowebapp</artifactId>
+    <artifactId>ToDoWebAppReactive</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>todowebapp</name>
     <description>todowebapp</description>
