add Claude Code skill

--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,18 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- H2 in-memory DB for tests (R2DBC driver + JDBC for schema init) -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.r2dbc</groupId>
+            <artifactId>r2dbc-h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
