--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -2,7 +2,7 @@ spring.application.name=ToDoWebApp
 spring.main.web-application-type=reactive
 
 # Use H2 in-memory database for testing
-spring.r2dbc.url=r2dbc:h2:mem:test;TRACE_LEVEL_SYSTEM_OUT=3;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=PostgreSQL
+spring.r2dbc.url=r2dbc:h2:mem:///test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=PostgreSQL
 spring.r2dbc.username=sa
 spring.r2dbc.password=
 spring.r2dbc.pool.initial-size=1
